# internal/server/grpc.go
@@ -4,13 +4,13 @@ import (
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
-	v1 "realword/api/realword/v1"
-	"realword/internal/conf"
-	"realword/internal/service"
+	v1 "realworld/api/realworld/v1"
+	"realworld/internal/conf"
+	"realworld/internal/service"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, realword *service.RealWordService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, realworld *service.RealWorldService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -26,6 +26,6 @@ func NewGRPCServer(c *conf.Server, realword *service.RealWordService, logger log
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterRealWordServer(srv, realword)
+	v1.RegisterRealWorldServer(srv, realworld)
 	return srv
 }
