# internal/server/http.go
@@ -1,33 +1,57 @@
 package server
 
 import (
+	"context"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/transport/http"
 	"github.com/go-kratos/swagger-api/openapiv2"
-	v1 "realword/api/realword/v1"
-	"realword/internal/conf"
-	"realword/internal/service"
+	v1 "realworld/api/realworld/v1"
+	"realworld/internal/conf"
+	"realworld/internal/pkg/middleware/auth"
+	"realworld/internal/service"
 )
 
+func NewSkipRoutersMatcher() selector.MatchFunc {
+
+	skipRouters := map[string]struct{}{
+		"/realworld.v1.RealWorld/Login":        {},
+		"/realworld.v1.RealWorld/Register":     {},
+		"/realworld.v1.RealWorld/GetArticle":   {},
+		"/realworld.v1.RealWorld/ListArticles": {},
+		"/realworld.v1.RealWorld/GetComments":  {},
+		"/realworld.v1.RealWorld/GetTags":      {},
+		"/realworld.v1.RealWorld/GetProfile":   {},
+	}
+
+	return func(ctx context.Context, operation string) bool {
+		if _, ok := skipRouters[operation]; ok {
+			return false
+		}
+		return true
+	}
+}
+
 // NewHTTPServer new a HTTP server.
-func NewHTTPServer(c *conf.Server, realword *service.RealWordService, logger log.Logger) *http.Server {
+func NewHTTPServer(confServer *conf.Server, confAuth *conf.Auth, realworld *service.RealWorldService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
+			selector.Server(auth.JWTAuth(confAuth.Secret, confAuth.Typ)).Match(NewSkipRoutersMatcher()).Build(),
 		),
 	}
-	if c.Http.Network != "" {
-		opts = append(opts, http.Network(c.Http.Network))
+	if confServer.Http.Network != "" {
+		opts = append(opts, http.Network(confServer.Http.Network))
 	}
-	if c.Http.Addr != "" {
-		opts = append(opts, http.Address(c.Http.Addr))
+	if confServer.Http.Addr != "" {
+		opts = append(opts, http.Address(confServer.Http.Addr))
 	}
-	if c.Http.Timeout != nil {
-		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
+	if confServer.Http.Timeout != nil {
+		opts = append(opts, http.Timeout(confServer.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterRealWordHTTPServer(srv, realword)
+	v1.RegisterRealWorldHTTPServer(srv, realworld)
 
 	openAPIhandler := openapiv2.NewHandler()
 	srv.HandlePrefix("/q/", openAPIhandler)
